BUG - desktop mode layout distortions due to structure refactoring FIXED

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -4,6 +4,7 @@
 @use "../../styles/partials/mixins" as *;
 
 .hero {
+  width: 100vw;
   margin-top: $mob-spacing-small;
   background-color: $color-secondary-dark-black;
 
